[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Arboretum"
version = "0.0.1"
authors = [
    { name="Ty Garrett", email="pgarrett@scripps.edu" },
    { name="Jeff Lane", email="jlane@scripps.edu" }
]
description = "A package for adding & storing "
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"